// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/menu should render correctly 1`] = `
<ol
  className="m-menu m-menu--bar module-menu"
  itemScope={true}
  itemType="https://schema.org/ItemList"
  role="menu"
>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="foo"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="bar"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <i
        aria-hidden="true"
        className="c-font-icon--icon m-menu__icon"
      />
      <span
        className="m-menu__label"
        itemProp="name"
      >
        label
      </span>
    </a>
    <link
      href="/test"
      itemProp="url"
    />
  </li>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://www.schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="url"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <span
        className="is-visually-hidden m-menu__label"
        itemProp="name"
      >
        
      </span>
    </a>
  </li>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://www.schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="url"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <span
        className="m-menu__label"
        itemProp="name"
      >
        
      </span>
    </a>
  </li>
  Module menu children
</ol>
`;

exports[`common/component/module/menu should render no itemType if unset 1`] = `
<ol
  className="m-menu m-menu--bar module-menu"
  role="menu"
>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="foo"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="bar"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <i
        aria-hidden="true"
        className="c-font-icon--icon m-menu__icon"
      />
      <span
        className="m-menu__label"
        itemProp="name"
      >
        label
      </span>
    </a>
    <link
      href="/test"
      itemProp="url"
    />
  </li>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://www.schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="url"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <span
        className="is-visually-hidden m-menu__label"
        itemProp="name"
      >
        
      </span>
    </a>
  </li>
  <li
    className="m-menu__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://www.schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-menu__item"
      href="/foo"
      itemProp="url"
      onClick={[Function]}
      role="menuitem"
      tabIndex="0"
      title="title"
    >
      <span
        className="m-menu__label"
        itemProp="name"
      >
        
      </span>
    </a>
  </li>
  Module menu children
</ol>
`;

exports[`common/component/module/menu should return null if content image is empty 1`] = `null`;
